--- a/package.json
+++ b/package.json
@@ -2,11 +2,43 @@
   "name": "renderpipe",
   "description": "Trivial rendering pipe for HTML prototypes",
   "version": "0.0.1",
+  "author": {
+    "name": "Ruben Vermeersch",
+    "email": "ruben@rocketeer.be",
+    "url": "http://rocketeer.be"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rubenv/renderpipe.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rubenv/renderpipe/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/rubenv/renderpipe/blob/master/LICENSE"
+    }
+  ],
+  "main": "renderpipe.js",
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
   "dependencies": {
     "async": "^0.9.0",
     "express": "^4.9.5",
     "jade": "^1.7.0",
     "mkdirp": "^0.5.0",
     "walk": "^2.3.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bump": "0.0.16",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^0.7.1"
   }
 }
