--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "renderpipe",
   "description": "Trivial rendering pipe for HTML prototypes",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": {
     "name": "Ruben Vermeersch",
     "email": "ruben@rocketeer.be",
@@ -30,6 +30,7 @@
   "dependencies": {
     "express": "^4.9.5",
     "jade": "^1.7.0",
+    "marked": "^0.3.2",
     "mkdirp": "^0.5.0",
     "walk": "^2.3.4"
   },
